derive TFMError and DVIError from exceptions.Exception
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@906 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,12 @@ PyX
   - tex module:
     - copy lfs handling from text module (share the same source???)
 
+  bugfixes:
+  - text module:
+    - derive TFMError and DVIError correctly from exceptions.Exception
+  - box module:
+    - correct rounding algorithm (Michael Schindler)
+
 0.3.1 (2003/04/04):
   - text module:
     - fix bug in dvi rule code where width was height
