multiple radii (up to two per point) and softnesses
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@909 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,8 @@ PyX
     - exceptions in drawsymbol & friends...
     - 3d graphs, circular graphs
     - dense -> density
+    - symbols + lines -> symbollines (??). Symbols should not allow setting lineattrs, and
+      lines not symbolattrs
   - canvas module:
     - default patterns
     - stroke and fill should support trafos
@@ -20,6 +22,10 @@ PyX
     - further improve lfs handling
   - tex module:
     - copy lfs handling from text module (share the same source???)
+
+  enhancements:
+  - box module:
+    - multiple radii (up to two per point) and softnesses
 
   bugfixes:
   - text module:
