multiple radii (up to two per point) and softnesses
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@910 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,7 @@ PyX
   enhancements:
   - box module:
     - multiple radii (up to two per point) and softnesses
+      (TODO: documentation)
 
   bugfixes:
   - text module:
