small corrections by Gert Ingold
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@912 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/box.tex
+++ b/manual/box.tex
@@ -47,11 +47,11 @@ distance)}
 \item[\texttt{circlealignvector(a, dx, dy)}:] returns a vector (a
 tuple (x, y)) to align the box at a circle with radius \verb|a| in
 the direction (\verb|dx|, \verb|dy|); see figure~\ref{fig:boxalign}
-\item[\texttt{linelealignvector(a, dx, dy)}:] as above, but align at a
+\item[\texttt{linealignvector(a, dx, dy)}:] as above, but align at a
 line with distance \verb|a|
 \item[\texttt{circlealign(a, dx, dy)}:] as circlealignvector, but
 perform the alignment instead of returning the vector
-\item[\texttt{linelealign(a, dx, dy)}:] as linealignvector, but
+\item[\texttt{linealign(a, dx, dy)}:] as linealignvector, but
 perform the alignment instead of returning the vector
 \item[\texttt{extent(dx, dy)}:] extent of the box in the direction
 (\verb|dx|, \verb|dy|)
