--- a/manual/text.tex
+++ b/manual/text.tex
@@ -104,7 +104,7 @@ figure~\ref{fig:textvalign} for an example
 (lowers the output by \verb|lowerratio| of the height of
 \verb|heightstr|), \verb|vshift.bottomzero=vshift.char(0)| (doesn't
 have an effect), \verb|vshift.middlezero=vshift.char(0.5)| (shifts
-down by halve of the height of a \verb|0|),
+down by half of the height of a \verb|0|),
 \verb|vshift.topzero=vshift.char(1)| (shifts down by the height of the a
 \verb|0|), \verb|vshift.mathaxis| (shifts down by the height of the
 mathematical axis)
