--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@ PyX
     - tick.text is renamed to tick.label (in progress), ticks and labels will become tickpos/tickdist and labelpos/labeldist in partitioning
     - separate texter out of the axispainter (in progress)
     TODO:
+    - allow for an iteration of a graph style, when it is used several times
     - common bboxes for different graphs
     - automatic datafile key title
     - exceptions in drawsymbol & friends...
