added graph range TODO by S. Kohler
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@919 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@ PyX
     - tick.text is renamed to tick.label (in progress), ticks and labels will become tickpos/tickdist and labelpos/labeldist in partitioning
     - separate texter out of the axispainter (in progress)
     TODO:
+    - do not include unneeded line segments when the axis range is set manually
     - allow for an iteration of a graph style, when it is used several times
     - common bboxes for different graphs
     - automatic datafile key title
