check in fix by Gert-Ludwig Ingold
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@924 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/path.tex
+++ b/manual/path.tex
@@ -79,10 +79,10 @@ p = path(moveto(0, 0),
          closepath())
 \end{verbatim}
 \end{quote}
-Later on, we shall see, how it is possible to output such a path on a
-canvas. For the moment, we only want to discuss the methods provided
-by the \verb|path| class. These range from standard operations like the
-determination of the length of a path via \verb|len(p)|, fetching of
+In section~\ref{chap:canvas}, we shall see, how it is possible to output such 
+a path on a canvas. For the moment, we only want to discuss the methods 
+provided by the \verb|path| class. These range from standard operations like 
+the determination of the length of a path via \verb|len(p)|, fetching of
 items using \verb|p[index]| and the possibility to concatenate two
 paths, \verb|p1 + p2|, append further \verb|pathel|s using
 \verb|p.append(pathel)| to more advanced methods, which are summarized
