added reset method todo item
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@925 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -25,6 +25,7 @@ PyX
   - text module:
     - pdf(la)tex support (will hopefully lead to markers in text)
     TODO:
+    - reset() method for the texrunner
     - further improve lfs handling
   - tex module:
     - copy lfs handling from text module (share the same source???)
