--- a/CHANGES
+++ b/CHANGES
@@ -24,8 +24,9 @@ PyX
     - shouldn't strokepath/fillpath be validated by "strokepath is not None" instead of just "strokepath"
   - text module:
     - pdf(la)tex support (will hopefully lead to markers in text)
+    - reset() method for the texrunner (done except for the documentation)
     TODO:
-    - reset() method for the texrunner
+    - the prolog method of the dvifile class recieves the page now -> return the prolog needed by this page only
     - further improve lfs handling
   - tex module:
     - copy lfs handling from text module (share the same source???)
