note the graph/texrunner bugfix
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@927 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -43,6 +43,8 @@ PyX
     - derive TFMError and DVIError correctly from exceptions.Exception
   - box module:
     - correct rounding algorithm (Michael Schindler)
+  - graph module:
+    - refer to the graphs texrunner instead of the defaulttexrunner
 
 0.3.1 (2003/04/04):
   - text module:
