\def\ProcessPyXBox->\long\def\ProcessPyXBox
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@930 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -29,6 +29,7 @@ PyX
     - the prolog method of the dvifile class recieves the page now -> return the prolog needed by this page only
     - further improve lfs handling
   - tex module:
+    - bugfix \def\ProcessPyXBox -> \long\def\ProcessPyXBox
     - copy lfs handling from text module (share the same source???)
   - data module:
     - full documentation via doc strings
