typo reported by M. Schindler
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@931 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/box.tex
+++ b/manual/box.tex
@@ -81,7 +81,7 @@ extent in the given direction (\verb|dx|, \verb|dy|) is taken into
 account)
 \end{description}
 
-\section{regtangular boxes}
+\section{rectangular boxes}
 
 For easier creation of rectangular boxes, the module provides the
 specialized class \verb|rect|. Its constructor first takes four
