typo reported by T. Lueck
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@932 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/graph.tex
+++ b/manual/graph.tex
@@ -732,7 +732,7 @@ changers:
 \begin{tabular}{ll}
 attribute changer&description\\
 \hline
-\texttt{changelinestyle}&iterates linestyles solid, dashed, dotted, dasheddotted\\
+\texttt{changelinestyle}&iterates linestyles solid, dashed, dotted, dashdotted\\
 \texttt{changestrokedfilled}&iterates \texttt{(canvas.stroked(), canvas.filled())}\\
 \texttt{changefilledstroked}&iterates \texttt{(canvas.filled(), canvas.stroked())}\\
 \end{tabular}
