rect style (and errorbars?) should use clipping
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@933 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@ PyX
     - dense -> density
     - symbols + lines -> symbollines (??). Symbols should not allow setting lineattrs, and
       lines not symbolattrs
+    - rect style (and errorbars?) should use clipping
   - canvas module:
     - default patterns
     - stroke and fill should support trafos
