correction for rounding towards zero of the int routine (reported by M. Schindler)
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@936 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -48,6 +48,7 @@ PyX
     - correct rounding algorithm (Michael Schindler)
   - graph module:
     - refer to the graphs texrunner instead of the defaulttexrunner
+    - rounding towards zero bugfix in autolinpart
 
 0.3.1 (2003/04/04):
   - text module:
