renamed lengthparam to lentopar in path.py
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@938 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -43,7 +43,7 @@ PyX
       (TODO: documentation)
     - ensurecenter added --- do we always force the creation of a center?
   - path module:
-    - lengthparam methods added including some tests (TODO: documentation)
+    - lentopar methods added including some tests (TODO: documentation)
     TODO:
     - reverse needs to be fixed
 
