Incorporate fixes bv Marcus Mendenhall - close files and pipes if they are no longer used - remove DeprecationWarning in Python 2.3
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@942 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -51,6 +51,8 @@ PyX
   bugfixes:
   - text module:
     - derive TFMError and DVIError correctly from exceptions.Exception
+    - close files and pipes, if they are no longer used (thanks to Marcus Mendenhall)
+    - remove DeprecationWarning in Python 2.3 (thanks to Marcus Mendenhall)
   - box module:
     - correct rounding algorithm (Michael Schindler)
   - graph module:
