log axis range rating bug
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@943 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -58,6 +58,7 @@ PyX
   - graph module:
     - refer to the graphs texrunner instead of the defaulttexrunner (cf. #728209)
     - rounding towards zero bugfix in autolinpart
+    - log axis range rating bugfix
   - mathtree module:
     - addarg bugs (#738724)
 
