--- a/CHANGES
+++ b/CHANGES
@@ -30,6 +30,7 @@ PyX
   - text module:
     - pdf(la)tex support (will hopefully lead to markers in text)
     - reset() method for the texrunner (done except for the documentation)
+    - texmessage.loadfd for accepting font description loading -> used as texmessagedefaultrun (done except for the documentation)
     TODO:
     - the prolog method of the dvifile class recieves the page now -> return the prolog needed by this page only
     - further improve lfs handling
