--- a/CHANGES
+++ b/CHANGES
@@ -31,6 +31,7 @@ PyX
     - pdf(la)tex support (will hopefully lead to markers in text)
     - reset() method for the texrunner (done except for the documentation)
     - texmessage.loadfd for accepting font description loading -> used as texmessagedefaultrun (done except for the documentation)
+    - don't bail out on width_index == 0, but mark character invalid instead
     TODO:
     - the prolog method of the dvifile class recieves the page now -> return the prolog needed by this page only
     - further improve lfs handling
