fix bug in example code
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@956 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/path.tex
+++ b/manual/path.tex
@@ -71,7 +71,7 @@ looks like:
 \begin{quote}
 \begin{verbatim}
 from pyx import *
-from path import *
+from pyx.path import *
 
 p = path(moveto(0, 0), 
          lineto(0, 1),
