added bbox option to epsfile
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@969 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -52,6 +52,10 @@ PyX
     - lentopar methods added including some tests (TODO: documentation)
     TODO:
     - reverse needs to be fixed
+  - epsfile module:
+     - new parameter bbox allows to override the bounding box of the eps file
+     TODO:
+     - document bbox parameter
 
   bugfixes:
   - text module:
