fix mixing up of height and width in scale calculation
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@974 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -70,6 +70,8 @@ PyX
     - log axis range rating bugfix
   - mathtree module:
     - addarg bugs (#738724)
+  - epsfile module:
+    - fix mixing up of height and width in scale calculation
 
 0.3.1 (2003/04/04):
   - text module:
