--- a/CHANGES
+++ b/CHANGES
@@ -28,10 +28,11 @@ PyX
     - make dash length available
     - shouldn't strokepath/fillpath be validated by "strokepath is not None" instead of just "strokepath"
   - text module:
-    - pdf(la)tex support (will hopefully lead to markers in text)
     - reset() method for the texrunner (done except for the documentation)
     - texmessage.loadfd for accepting font description loading -> used as texmessagedefaultrun (done except for the documentation)
     - don't bail out on width_index == 0, but mark character invalid instead
+    - dvicopy flag (done except for the documentation)
+    - preliminary version of pyxgraphics flag (handling of file names, no documentation)
     TODO:
     - the prolog method of the dvifile class recieves the page now -> return the prolog needed by this page only
     - further improve lfs handling
