quick and dirty documentation for (obsolete) connector module
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@985 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -28,6 +28,7 @@ Andr\'e Wobst \href{mailto:wobsta@users.sourceforge.net}{\url{<wobsta@users.sour
 \include{canvas}
 \include{text}
 \include{box}
+\include{connector}
 \include{epsfile}
 \include{bbox}
 \include{color}
