--- a/CHANGES
+++ b/CHANGES
@@ -34,11 +34,15 @@ PyX
     - reset() method for the texrunner (done except for the documentation)
     - texmessage.loadfd for accepting font description loading -> used as texmessagedefaultrun (done except for the documentation)
     - don't bail out on width_index == 0, but mark character invalid instead
-    - dvicopy flag (done except for the documentation)
+    - dvicopy flag
     - preliminary version of pyxgraphics flag (handling of file names, no documentation)
+    - support psfonts.map: font names, font encodings
     TODO:
     - the prolog method of the dvifile class recieves the page now -> return the prolog needed by this page only
     - further improve lfs handling; pyxgraphics handling of file names
+    - SlantFont & Co support
+    - document dvicopy
+    - mention psfonts.map in docu
   - tex module:
     - bugfix \def\ProcessPyXBox -> \long\def\ProcessPyXBox
     - copy lfs handling from text module (share the same source???)
