--- a/manual/epsfile.tex
+++ b/manual/epsfile.tex
@@ -39,7 +39,9 @@ horizontal alignment: \texttt{l} for left, \texttt{c} for center
 \texttt{clip=1} & Clip to bounding box of EPS file?\\
 \texttt{showbbox=0} & Stroke bounding box of EPS file?\\
 \texttt{translatebox=1} & Use lower left corner of bounding box of EPS
-file? Set to $0$ with care.
+file? Set to $0$ with care.\\
+\texttt{bbox=None} & If given, use \texttt{bbox} instance instead of
+bounding box of EPS file.
 \end{tabularx}
 
 
